--- a/CLIQUE/index.html
+++ b/CLIQUE/index.html
@@ -8,48 +8,44 @@
     <style>
       .imagemGoogle{
             position: relative;
-            top: 200px;
-            left: 200px;
-            width: 300px;
-            /* Para deixar o jogo mais desafiante, mude o tempo de 5s para 3s do animation */
-            animation: andaBoi 5s infinite;
-            animation-direction: alternate;
-        }
-        @keyframes andaBoi{
-            0%{
-                transform: translate(0px, 0px);
-            }
-            25%{
-                transform: translate(-700px, -500px);
-            }
-            50%{
-                transform: translate(1000px, 300px);
-            }
-            75%{
-                transform: translate(250px, 250px);
-            }
-            100%{
-                transform: translate(-500px, -600px);
-            }
+            top: 0px;
+            left: 0px;
+            width: 20px;
         }
         p{
             text-align: center;
         }
     </style>
 </head>
-<body>
-    <img class="imagemGoogle" onclick="diminui()" src="https://cdn1.iconfinder.com/data/icons/fs-icons-ubuntu-by-franksouza-/512/google-chrome.png">
+<body onload="moving()">
+    <img class="imagemGoogle" onclick="diminui()" onmouseover="tenteDeNovo()" src="https://cdn1.iconfinder.com/data/icons/fs-icons-ubuntu-by-franksouza-/512/google-chrome.png">
     <p><strong>Tente clicar na imagem.<br>BOA SORTE!!!</strong></p>
     <script>
-        var x = 100;
         var y = 0;
       function diminui(){
-        x += 50;
         y += 1;
         console.log("Você está com " + y + " pontos.");
         document.getElementsByTagName("p")[0].innerText="Você está com " + y + " pontos." ;
-        // document.getElementsByTagName("p")[0].style.fontSize=x+"px";
       }
+     function move(){
+         let image=document.getElementsByTagName("img")[0];
+         image.style.position="absolute";
+        image.style.top=Math.random()*600+"px"; 
+         image.style.left=Math.random()*1300+"px";
+     }
+     function moving() { 
+         move();
+         setTimeout ( moving , 500 )
+     }
+    // Para trolar alguma pessoa é só tirar essa a função "tenteDeNovo" do comentário 
+    //  function tenteDeNovo(){
+    //     let image=document.getElementsByTagName("img")[0];
+    //     image.style.position="absolute";
+    //     image.style.top=Math.random()*600+"px"; 
+    //     image.style.left=Math.random()*1300+"px";
+    //  }
+
+      
     </script>
 </body>
 </html>
