--- a/CLIQUE/index.html
+++ b/CLIQUE/index.html
@@ -19,6 +19,8 @@
         }
     </style>
     <script>
+        var tmp;
+        var v=0;
         function pontos(obj, v){
             obj.innerHTML=v;
         }
@@ -27,29 +29,30 @@
             obj.style.left=(Math.random()*1200) + "px";
             obj.style.top=(Math.random()*600) + "px";
         }
+        function tentaNao(){
+            var obj=document.getElementById("image");
+            obj.style.left=(Math.random()*1200) + "px";
+            obj.style.top=(Math.random()*600) + "px";
+        }
         function iniciar(){
             var x=document.getElementById("valor").value;
             console.log(x);
-            setInterval(move, x);
+            tmp=setInterval(move, x);
+        }
+        function parar(){
+            clearInterval(tmp);
         }
         function reset(){
             document.location.reload(true);
         }
         function addEventos(){
-            var obj=document.getElementById("image");
-            var ini=document.getElementsByTagName("button")[0];
-            var res=document.getElementsByTagName("button")[1];
-            var aumVel=document.getElementsByTagName("button")[1];
-            var dimVel=document.getElementsByTagName("button")[2];
-            var v=0
-            obj.addEventListener("click", function(event){
+            document.getElementById("image").addEventListener("click", function(event){
                 pontos(document.getElementById("text"), "Você tem " + (v+=1) + " pontos");
             });
-            ini.addEventListener("click", iniciar);
-            res.addEventListener("click", reset);
-            // obj.addEventListener("mouseover", function(event){
-            //     move(obj, (Math.random()*600) + "px", (Math.random()*1200) + "px");
-            // })
+            document.getElementById("image").addEventListener("mouseover", tentaNao);
+            document.getElementsByTagName("button")[0].addEventListener("click", iniciar);
+            document.getElementsByTagName("button")[2].addEventListener("click", reset);
+            document.getElementsByTagName("button")[1].addEventListener("click", parar);
         }
         
         window.addEventListener("load", addEventos);
@@ -62,6 +65,7 @@
         <p id="text" ><strong>Tente clicar na imagem.<br>BOA SORTE!!!</strong></p>
         <input id="valor" type="text" placeholder= "Digite em milissegundo.Ex:1000=1s">
         <button>Iniciar</button>
+        <button>Parar</button>
         <button>Resetar</button>
     </div>
 
